0822-Chocolate_custom_screen2

--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -16,7 +16,7 @@
                 <li><a href="#">SHOP</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">NEWS</a></li>
-                <li><a href=    "#">Q&A</a></li>
+                <li><a href="#">Q&A</a></li>
                 <li><a href="#" id="customized">customized</a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
@@ -43,14 +43,15 @@
                 <div id="select_field1__second_page">
                     <p>口味</p>
                     <div id="select_field1__second_page_div">
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 4.svg" alt=""
-                                class="select_field1__second_page_img"></a>
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 5.svg" alt=""
-                                class="select_field1__second_page_img"></a>
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6.svg" alt=""
-                                class="select_field1__second_page_img"></a>
-                        <a href="#"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 7.svg" alt=""
-                                class="select_field1__second_page_img"></a>
+                        <a href="#" id="milk_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 4.svg" alt=""
+                                class="select_field1__second_page_img" id="milk_chocolate"></a>
+                                <!-- <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6-1.svg" alt=""> -->
+                        <a href="#" id="dark_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 5.svg" alt=""
+                                class="select_field1__second_page_img" id="dark_chocolate"></a>
+                        <a href="#" id="white_chocolatea_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6.svg" alt=""
+                                class="select_field1__second_page_img" id="white_chocolatea">
+                        <a href="#" id="strawberry_chocolate_box"><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 7.svg" alt=""
+                                class="select_field1__second_page_img" id="strawberry_chocolate"></a>
                     </div>
                     <div id="select_field1_btn">
                         <a href="#"><img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt=""></a>
@@ -100,29 +101,29 @@
                     <p>模板</p>
                     <div id="select_field3__second_page_div">
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 16.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img1"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 17.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img2"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 18.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img3"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 19.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img4"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 20.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img5"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 21.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img6"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 22.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img7"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 23.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img8"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 24.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img9"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 25.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img10"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 26.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img11"></a>
                         <a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 27.svg" alt=""
-                                class="select_field3__second_page_img"></a>
+                                class="select_field3__second_page_img" id="select_field3__second_page_img12"></a>
                     </div>
                     <div id="select_field3__second_page_btn">
                         <a href="#"><img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt=""></a>
@@ -133,6 +134,11 @@
             <div id="center_display_second_page">
                 <div id="center_display_second_page_make_img">
                     <img src="./images/Custom_block/small_chocolate/downloadedImage 1.svg" alt="">
+                    <div id="center_display_second_page_box">
+                        <div id="center_display_second_page_box_div1"></div>
+                        <div id="center_display_second_page_box_div2"></div>
+                        <div id="center_display_second_page_box_div3"></div>
+                    </div>
                 </div>
                 <div class="center_display_second_page_box">
                     <img id="center_display_second_page_box1"
@@ -189,7 +195,8 @@
         <div id="Prompt_field">
             <div>
                 <ul>
-                    <li id="Prompt_field_img0"><a href="./Customization.html"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
+                    <li id="Prompt_field_img0"><a href="./Customization.html"><img
+                                src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
                     <li id="Prompt_field_img1" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 31.svg" alt=""></li>
                     <li id="Prompt_field_img2" class="Prompt_field"><img
@@ -198,12 +205,14 @@
                             src="./images/Custom_block/Prompt_field/Frame 3.svg" alt=""></li>
                     <li id="Prompt_field_img4" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 4.svg" alt=""></li>
-                    <li id="Prompt_field_img5"><a href="./Customization_three_page.html"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
+                    <li id="Prompt_field_img5"><a href="./Customization_three_page.html"><img
+                                src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
     </main>
     <script src="./js/Customization_two.js"></script>
+    <script src="./js/Drag_function_two.js"></script>
 </body>
 
 </html>
