0823-Chocolate_custom_screen2

--- a/Customization.html
+++ b/Customization.html
@@ -380,7 +380,7 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 1-1.svg"
+                    <li class="menu_below_li" id="Select_function"><a href="#"><img src="./images/Custom_block/menu_below/Frame 1-1.svg"
                                 alt="">
                             <p>選取</p>
                         </a></li>
