0823-Chocolate_custom_screen3

--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -45,8 +45,10 @@
                     <p id="left_sidebar_three_page_div1_p">樣式</p>
                     <div id="left_sidebar_three_page_div1_1">
                         <div>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Fig 1.svg" alt=""></a>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 2.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a1"><img
+                                    src="./images/Custom_block/box/left_sidebar/Fig 1.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a2"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 2.svg" alt=""></a>
                         </div>
                     </div>
                     <div id="left_sidebar_three_page_div1_hr">
@@ -55,9 +57,12 @@
                     <div id="left_sidebar_three_page_div1_2">
                         <p>情人節</p>
                         <div>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 3.svg" alt=""></a>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 4.svg" alt=""></a>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 5.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a3"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 3.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a4"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 4.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a5"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 5.svg" alt=""></a>
                         </div>
                     </div>
                     <div id="left_sidebar_three_page_div1_hr">
@@ -66,9 +71,12 @@
                     <div id="left_sidebar_three_page_div1_3">
                         <p>生日</p>
                         <div>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 6.svg" alt=""></a>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 7.svg" alt=""></a>
-                            <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 8.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a6"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 6.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a7"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 7.svg" alt=""></a>
+                            <a href="#" id="left_sidebar_three_page_div1_1_a8"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 8.svg" alt=""></a>
                         </div>
                     </div>
                     <div id="left_sidebar_three_page_div1_box">
@@ -110,8 +118,8 @@
                         <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 22.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 23.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 24.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 25.svg" alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 26.svg" alt=""></a>
+                        <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 25.svg" alt=""></a> -->
+                        <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 26.svg" alt=""></a> -->
                     </div>
                     <div id="left_sidebar_three_page_div3_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
@@ -120,7 +128,20 @@
             </div>
             <div id="center_display_second_page">
                 <div id="center_display_second_page_make_img">
-                    <img src="./images/Custom_block/box/downloadedImage__1.svg" alt="">
+                    <img src="./images/Custom_block/box/downloadedImage__1.svg" alt=""
+                        id="center_display_second_page_img1">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 3-click.svg" alt=""
+                        id="center_display_second_page_img2">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 4-click.svg" alt=""
+                        id="center_display_second_page_img3">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 5-click.svg" alt=""
+                        id="center_display_second_page_img4">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 6-click.svg" alt=""
+                        id="center_display_second_page_img5">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 7-click.svg" alt=""
+                        id="center_display_second_page_img6">
+                    <img src="./images/Custom_block/box/left_sidebar/Frame 8-click.svg" alt=""
+                        id="center_display_second_page_img7">
                 </div>
                 <div class="center_display_second_page_box">
                     <img id="center_display_second_page_box2" src="./images/Custom_block/box/downloadedImage__2.svg"
