--- a/Customization.html
+++ b/Customization.html
@@ -23,14 +23,38 @@
                         </a></li>
                 </div>
                 <div id="menu_id_icon">
-                    <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
+                    <li><a href="#" id="menu_id_icon_search"><img
+                                src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
                     </li>
-                    <li id="menu_id_icon_show"><a href="#"><img
-                                src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                    <li id="menu_id_icon_show"><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
                     </li>
-                    <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
+                    <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                                alt=""></a></li>
                 </div>
             </ul>
+            <ul id="menu_id_search">
+                <li>
+                    <div id="menu_id_search_divBox">
+                        <!-- <div id="menu_id_search_divBox_divbox"> -->
+                        <a href="#" id="menu_id_search_divBox_a1"><img src="./images/Custom_block/menu/search.svg"
+                                alt="">
+                            <p>搜尋</p>
+                        </a>
+                        <!-- </div> -->
+                        <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
+                                alt=""></a>
+                    </div>
+                <li><a href="#" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                </li>
+                <li><a href="#" id="menu_id_search_li3"><img
+                            src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                </li>
+        </div>
+        </div>
+
+        </li>
+
+        </ul>
         </div>
         <div id="all">
             <div id="left_sidebar">
@@ -342,8 +366,7 @@
                         <div id="middle_div1_box_div6"></div>
                         <div id="middle_div1_box_div7"></div>
                         <div id="middle_div1_box_div8"></div>
-                        <div id="middle_div1_box_div9">
-                        </div>
+                        <div id="middle_div1_box_div9"></div>
                         <div id="middle_div1_box_div10"></div>
                         <div id="middle_div1_box_div11"></div>
                         <div id="middle_div1_box_div12"></div>
@@ -380,35 +403,35 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li" id="Select_function"><a href="#"><img src="./images/Custom_block/menu_below/Frame 1-1.svg"
-                                alt="">
-                            <p>選取</p>
+                    <li class="menu_below_li" id="Select_function"><a href="#"><img
+                                src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
+                            <!-- <p>選取</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 2-1.svg" alt="">
-                            <p>縮放</p>
+                                src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
+                            <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/material-symbols-light_crop-rotate-rounded.svg"
-                                alt="">
-                            <p>旋轉</p>
+                                src="./images/Custom_block/menu_below/Frame 3.svg"
+                                alt="" id="menu_below_bug_img">
+                            <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 3-1.svg" alt="">
-                            <p>刪除</p>
+                                src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
+                            <!-- <p>刪除</p> -->
                         </a>
                     </li>
                     <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 4-1.svg" alt="">
-                            <p>翻轉</p>
+                                src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
+                            <!-- <p>翻轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
-                                src="./images/Custom_block/menu_below/Frame 5-1.svg" alt="">
-                            <p>上一步</p>
+                                src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
+                            <!-- <p>上一步</p> -->
                         </a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu_below/Frame 6-1.svg"
-                                alt="">
-                            <p>重製</p>
+                    <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
+                            <img src="./images/Custom_block/menu_below/Frame 7.svg" alt="" id="menu_below_li_right3_img">
+                            <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
             </div>
