--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -44,24 +44,24 @@
                 <div id="left_sidebar_four_page_div1">
                     <p id="left_sidebar_four_page_div1_p">樣式</p>
                     <div id="left_sidebar_four_page_div1_div">
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1.svg"
-                                alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a1"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-1.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a2"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-2.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a3"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-3.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a4"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-4.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a5"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-5.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a6"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-6.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a7"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-7.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a8"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-8.svg" alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div1_div_a9"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-9.svg" alt=""></a>
                     </div>
                     <div id="left_sidebar_four_page_div1_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
@@ -124,7 +124,26 @@
             </div>
             <div id="center_display_second_page">
                 <img id="center_display_second_page_card1"
-                    src="./images/Custom_block/Customized_cards/downloadedImage 1.svg" alt="">
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img1.svg" alt="">
+                <img id="center_display_second_page_card2"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img2.svg" alt="">
+                <img id="center_display_second_page_card3"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img3.svg" alt="">
+                <img id="center_display_second_page_card4"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img4.svg" alt="">
+                <img id="center_display_second_page_card5"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img5.svg" alt="">
+                <img id="center_display_second_page_card6"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img6.svg" alt="">
+                <img id="center_display_second_page_card7"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img7.svg" alt="">
+                <img id="center_display_second_page_card8"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img8.svg" alt="">
+                <img id="center_display_second_page_card9"
+                    src="./images/Custom_block/Customized_cards/middle_picture/background_img9.svg" alt="">
+                <div id="center_display_second_page_p">
+                    <p id="center_display_second_page_divp"></p>
+                </div>
                 <div class="center_display_second_page_box">
                     <img src="./images/Custom_block/Customized_cards/downloadedImage 2.svg" alt="">
                 </div>
