--- a/shop.html
+++ b/shop.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="permutation">
                     <div class="permutation_btn" id="permutationBtn">
-                        <a><img src="./images/shop_images/permutation.svg" alt=""></a>
+                        <a><img src="./images/shop_images/permutation.svg" alt="" /></a>
                         <ul id="permutationList">
                             <li><a href="">熱門</a></li>
                             <li><a href="">推薦</a></li>
